syntax = "proto3";
package fintech.payment;
option go_package = "github.com/fintech/shared/proto/gen/go/payment";
option java_package = "com.fintech.shared.proto.payment";
option java_outer_classname = "PaymentProto";
import "google/protobuf/timestamp.proto";

// Payment entity
message Payment {
  string transaction_id = 1;
  string from_user_id = 2;
  string to_user_id = 3;
  int64 amount_cents = 4;  // Always use cents to avoid float precision issues
  string currency = 5;
  PaymentStatus status = 6;
  PaymentType type = 7;
  string idempotency_key = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
  string failure_reason = 11;
}
enum PaymentStatus {
  UNKNOWN = 0;
  PENDING = 1;
  PROCESSING = 2;
  COMPLETED = 3;
  FAILED = 4;
  CANCELLED = 5;
  REVERSED = 6;
}
enum PaymentType {
  TYPE_UNKNOWN = 0;
  PEER_TO_PEER = 1;
  MERCHANT_PAYMENT = 2;
  BILL_PAYMENT = 3;
  TOP_UP = 4;
}
message ProcessPaymentRequest {
  string from_user_id = 1;
  string to_user_id = 2;
  int64 amount_cents = 3;
  string currency = 4;
  string idempotency_key = 5;
  map<string, string> metadata = 6;
}
message ProcessPaymentResponse {
  string transaction_id = 1;
  PaymentStatus status = 2;
  int64 amount_cents = 3;
  google.protobuf.Timestamp created_at = 4;
  string error_message = 5;
}
service PaymentService {
  rpc ProcessPayment(ProcessPaymentRequest) returns (ProcessPaymentResponse);
  rpc GetPaymentStatus(GetPaymentStatusRequest) returns (Payment);
}
message GetPaymentStatusRequest {
  string transaction_id = 1;
}